# TradeSim

./: CMakeLists.txt  Makefile  Makefile_ui  err.txt  kill.sh  main.cpp  package-lock.json  package.json  run.sh
core/: AppController.cpp  AppController.hpp  EventDispatcher.hpp  Metrics.hpp  OrderBook.hpp  OrderBookSnapshot.hpp
events/: OrderBookUpdatedEvent.hpp
models/: AlmgrenChrissModel.cpp  AlmgrenChrissModel.hpp  FeeTierModel.cpp  FeeTierModel.hpp  IFeesModel.hpp  IMarketImpactModel.hpp  ISlippageModel.hpp  LinearSlippageModel.cpp  LinearSlippageModel.hpp
network/: IMarketDataConnector.hpp  OKXWebSocketConnector.cpp  OKXWebSocketConnector.hpp  UIBroadcastServer.hpp  UIbroadcastServer.cpp
src/: App.js
src/components/: InputPanel.jsx  OutputPanel.jsx
ui/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  UIUpdater.cpp  UIUpdater.hpp
utils/: LockFreeQueue.cpp  LockFreeQueue.hpp  Logger.hpp
